; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/9p/extr_client.c_p9_client_cb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/9p/extr_client.c_p9_client_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p9_client = type { i32 }
%struct.p9_req_t = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@P9_DEBUG_MUX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c" tag %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"wakeup: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @p9_client_cb(%struct.p9_client* %0, %struct.p9_req_t* %1) #0 {
  %3 = alloca %struct.p9_client*, align 8
  %4 = alloca %struct.p9_req_t*, align 8
  store %struct.p9_client* %0, %struct.p9_client** %3, align 8
  store %struct.p9_req_t* %1, %struct.p9_req_t** %4, align 8
  %5 = load i32, i32* @P9_DEBUG_MUX, align 4
  %6 = load %struct.p9_req_t*, %struct.p9_req_t** %4, align 8
  %7 = getelementptr inbounds %struct.p9_req_t, %struct.p9_req_t* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @P9_DPRINTK(i32 %5, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.p9_req_t*, %struct.p9_req_t** %4, align 8
  %13 = getelementptr inbounds %struct.p9_req_t, %struct.p9_req_t* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @wake_up(i32 %14)
  %16 = load i32, i32* @P9_DEBUG_MUX, align 4
  %17 = load %struct.p9_req_t*, %struct.p9_req_t** %4, align 8
  %18 = getelementptr inbounds %struct.p9_req_t, %struct.p9_req_t* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @P9_DPRINTK(i32 %16, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  ret void
}

declare dso_local i32 @P9_DPRINTK(i32, i8*, i32) #1

declare dso_local i32 @wake_up(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
